resources/sass/files.scss
.home-main-section {
  flex-direction: column;
  justify-content: center;
}

.file-table-container, .upload-file-container, .edit-card-container {
  display: flex;
  flex-direction: column;
  max-width: 1400px;
  margin: 0 auto;
  padding: 0 40px;
  flex-grow: 1;
  align-items: center;
}

#upload-button a, #list-button a {
  color: white;
  text-decoration: none;
  margin-bottom: 20px;
  display: inline-block;
}

#list-button {
  margin-right: 30px;
}

.files-nav-icon {
  font-size: 3em;
  margin-bottom: 8px;
}

.files-nav-buttons {
  text-align: center;
  margin-top: 30px;
  margin-bottom: 30px;
}

.card {
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
  transition: 0.3s;
  width: 60vw;
  background-color: white;
  border-radius: 5px;
  padding-top: 10px;
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 10px;
  align-items: center;
  color: black;
  margin-bottom: 100px;
}

.card:hover {
  box-shadow: 0 8px 16px 0px rgba(0,0,0,0.8);
}

.file-table {
  table-layout: fixed;
  background-color: white;
  color: black;
  margin: auto;
  width: 100%;
}

.file-table:last-child {
  border-bottom: 1px solid #adadad;
}

.normal-row td, td div {
  font-weight: 100;
  border-collapse: collapse;
  border-left: 1px solid #adadad;
  background-color: white;
  color: black;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.heading-name {
  width: 75%
}

.heading-size {
  width: 17%
}

.heading-date {
  width: 19%
}

td span {
  padding: 7px 13px;
  display: inline-block;
  text-overflow: ellipsis;
  overflow: hidden;
  width:100%;
}

span a {
  color: #838383;
  text-decoration: none;
  padding-right: 0.6em;
}

span a:hover {
  text-decoration: none;
  cursor: pointer;
}

.heading-row > th {
  border-left: 1px solid #adadad;
  border-bottom: 1px solid #adadad;
  border-top: 1px solid #adadad;
  padding-bottom: 5px;
  padding-top: 5px;
  font-weight: bold;
}

.td-right {
  border-right: 1px solid #adadad;
}

.td-no-left {
  border-left: 0px;
}

.td-last {
  border-top: 1px solid #adadad;
}

#notes {
  width: 100%;
  height: 100px;
}

.submit-button {
  border: 1px solid #adadad;
  border-radius: 2px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 2px;
  padding-bottom: 2px;
  text-decoration: none;
  color: #4b4b4b;
}

textarea {
  margin-top: 5px;
}

.upload-area {
  height: 30px;
}

.upload-text {
  font-size: 0.6em;
}

.progress {
  position: relative;
  height: 4px;
  display: block;
  width: 100%;
  background-color: #acece6;
  border-radius: 2px;
  background-clip: padding-box;
  margin: 1.2rem 0 0 0;
  overflow: hidden;
}

.progress .bar {
  background-color: #26a69a;
}

.progress .bar:before {
  content: "";
  position: absolute;
  background-color: inherit;
  top: 0;
  left: 0;
  bottom: 0;
  will-change: left, right;
  -webkit-animation: bar 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395)
  infinite;
  animation: bar 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
}

.progress .bar:after {
  content: "";
  position: absolute;
  background-color: inherit;
  top: 0;
  left: 0;
  bottom: 0;
  will-change: left, right;
  -webkit-animation: bar-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1)
  infinite;
  animation: bar-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1)
  infinite;
  -webkit-animation-delay: 1.15s;
  animation-delay: 1.15s;
}

@-webkit-keyframes bar {
  0% {
    left: -35%;
    right: 100%;
  }
  60% {
    left: 100%;
    right: -90%;
  }
  100% {
    left: 100%;
    right: -90%;
  }
}

@keyframes bar {
  0% {
    left: -35%;
    right: 100%;
  }
  60% {
    left: 100%;
    right: -90%;
  }
  100% {
    left: 100%;
    right: -90%;
  }
}

@-webkit-keyframes bar-short {
  0% {
    left: -200%;
    right: 100%;
  }
  60% {
    left: 107%;
    right: -8%;
  }
  100% {
    left: 107%;
    right: -8%;
  }
}

@keyframes bar-short {
  0% {
    left: -200%;
    right: 100%;
  }
  60% {
    left: 107%;
    right: -8%;
  }
  100% {
    left: 107%;
    right: -8%;
  }
}

#filedrag {
  display: none;
  font-weight: bold;
  text-align: center;
  padding: 1em 0;
  margin: 1em 0;
  color: #555;
  border: 2px dashed #555;
  border-radius: 7px;
  cursor: default;
}

#filedrag.hover {
  color: #f00;
  border-color: #f00;
  border-style: solid;
  box-shadow: inset 0 3px 4px #888;
}

.no-files-container {
  text-align: center;
}

.no-files-message {
  text-align: center;
  font-size: 0.8em;
}

